heatmap modified to use ggplot2, not complete

--- a/FunciSNP/inst/doc/FunciSNP_vignette.tex
+++ b/FunciSNP/inst/doc/FunciSNP_vignette.tex
@@ -1003,7 +1003,7 @@ Questions or comments, please contact Simon G. Coetzee (scoetzee NEAR gmail
     gdata~2.8.2, genefilter~1.36.0, GenomicFeatures~1.6.7,
     GenomicRanges~1.6.4, GGBase~3.14.0, ggplot2~0.8.9, GGtools~4.0.0,
     GO.db~2.6.1, gplots~2.10.1, gtools~2.6.2, IRanges~1.12.5,
-    KernSmooth~2.23-7, lattice~0.20-0, limma~3.10.2, matlab~0.8.9,
+    KernSmooth~2.23-7, lattice~0.20-0, limma~3.10.2,
     Matrix~1.0-4, multtest~2.10.0, org.Hs.eg.db~2.6.4, plyr~1.7.1,
     proto~0.3-9.2, RCurl~1.9-5, reshape~0.8.4, Rsamtools~1.6.3,
     RSQLite~0.11.1, rtracklayer~1.14.4, snpStats~1.4.1,
